kubernetes/v2.0/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog-v2
  namespace: v2-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-catalog
      version: v2.0
  template:
    metadata:
      labels:
        app: product-catalog
        version: v2.0
    spec:
      containers:
      - name: app
        image: rachitharajesh/product-catalog:v2.0.0
        ports:
        - containerPort: 9191
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9191
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
