kubernetes/v2.0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-service
  namespace: v2-namespace
spec:
  type: NodePort
  selector:
    app: product-catalog
    version: v2.0
  ports:
    - port: 80
      targetPort: 9191
      nodePort: 30002
